# factory-droid-desktop-linux-port

./: .eslintrc.json  .gitignore  Makefile  README.md  flake.nix  install.sh  jest.config.ts  package-lock.json  package.json  tsconfig.json
docs/: updater.md
linux-features/: README.md
src/: about-panel-patch.ts  artifact-hygiene.ts  asar-metadata.ts  auth-safety.ts  auto-updater-patch.ts  cli.ts  config.ts  daemon-transport-patch.ts  desktop-integration.ts  dmg-extraction.ts  dmg-fetcher.ts  dmg-validator.ts  droid-resolver.ts  launch-lifecycle.ts  packaging.ts  parity-validation.ts  release-metadata.ts  runtime-assembly.ts  runtime-classifier.ts  safe-mode.ts  sessions-prompts-terminal.ts  tool-check.ts  window-controls-patch.ts
tests/: about-panel-patch.test.ts  artifact-hygiene.test.ts  asar-metadata.test.ts  auto-updater-patch.test.ts  config.test.ts  daemon-transport-patch.test.ts  desktop-integration.test.ts  dmg-extraction.test.ts  dmg-fetcher.test.ts  dmg-validator.test.ts  droid-resolver.test.ts  e2e-auth-safety.test.ts  e2e-build-and-launch.test.ts  e2e-sessions-prompts-terminal.test.ts  features-loader.test.ts  launch-lifecycle.test.ts  packaging.test.ts  parity-validation.test.ts  release-metadata.test.ts  runtime-assembly.test.ts  runtime-classifier.test.ts  safe-mode.test.ts  tool-check.test.ts  window-controls-patch.test.ts
updater/: Cargo.toml
updater/src/: app.rs  builder.rs  cache_cleanup.rs  cli.rs  config.rs  install.rs  install_rollback.rs  liveness.rs  main.rs  notify.rs  port_update.rs  rollback.rs  state.rs  test_util.rs  upstream.rs
(+14 files in other folders)
